added example of content based flex vs container based grid

--- a/flexvsgrid.html
+++ b/flexvsgrid.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="flexvsgrid.css">
 </head>
 <body>
-    <h2>Flexbox</h2>
+
+    <div class="row">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+    </div>
+
+    <!-- <h2>Flexbox</h2>
     <div class="row-flex">
         <div>1 2 3  4 5 6 7 8 9 0</div>
         <div>2</div>
@@ -26,6 +34,6 @@
         <div>4</div>
         <div>5</div>
         <div>6</div>
-    </div>
+    </div> -->
 </body>
 </html>
