--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum modi nisi tenetur sint dignissimos nulla, blanditiis nesciunt.</p>
     </div>
   </div>
-  
   <!-- second example -->
+  <div class="fixed-size-container">
+    <div class="fixed-size">1</div>
+    <div class="fixed-size">2</div>
+    <div class="fixed-size">3</div>
+    <div class="fixed-size">4</div>
+    <div class="fixed-size">5</div>
+  </div>
+  
+  <!-- Extension example -->
   <div class="call-outs-container">
     <div class="call-out">
       <h4>Feature 1</h4>
@@ -47,13 +55,5 @@
     </div>
   </div>
   
-  <!-- third example -->
-  <div class="fixed-size-container">
-    <div class="fixed-size">1</div>
-    <div class="fixed-size">2</div>
-    <div class="fixed-size">3</div>
-    <div class="fixed-size">4</div>
-    <div class="fixed-size">5</div>
-  </div>
 </body>
 </html>
